Add daily GitHub Action for automated overlay package updates
## Objective

Automate the overlay package update process that was previously manual-only
(via Claude slash command). A daily CI workflow checks for new upstream
versions, updates package definitions, verifies builds, and pushes to main.

## Primary Changes

- Add `scripts/update-packages.sh`: self-contained bash script with
  update functions for claude-code (npm) and codex (Rust). Handles
  version checking, hash prefetching, package.nix rewriting, npmDepsHash
  extraction via deliberate build failure, Cargo.lock git-dep parsing,
  and build verification with automatic rollback on failure.
- Add `.github/workflows/update-packages.yml`: daily cron (09:00 UTC) +
  manual dispatch workflow that runs the update script and commits/pushes.
- Harden `.github/workflows/build.yml`: pin actions to commit SHAs, add
  minimal permissions, persist-credentials: false, timeout, concurrency.
- Both workflows follow supply-chain security best practices: all actions
  pinned to full 40-char commit SHAs, minimal permissions, concurrency
  controls, timeouts on all jobs.

## Key Technical Concepts

- Nix buildNpmPackage npmDepsHash extraction (deliberate empty-hash build)
- Nix buildRustPackage cargoLock.outputHashes via nix-prefetch-git
- GitHub Actions supply-chain hardening (SHA pinning, least-privilege
  permissions, concurrency groups)
- awk-based Cargo.lock git dependency parsing and package.nix rewriting

## Files and Code Sections

- `scripts/update-packages.sh` (new): update_claude_code() and
  update_codex() functions, main entrypoint
- `.github/workflows/update-packages.yml` (new): daily auto-update
  workflow with SHA-pinned actions and concurrency control
- `.github/workflows/build.yml` (modified): SHA-pinned actions,
  permissions: read, persist-credentials: false, timeout-minutes,
  concurrency group
- `CLAUDE.md` (modified): added .github/workflows/ and scripts/ to
  directory structure, added Automated Upd

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,6 +22,11 @@ tasks:
     cmds:
       - nix flake check --no-build
 
+  update-packages:
+    desc: Run the package update script
+    cmds:
+      - bash scripts/update-packages.sh
+
   fmt:
     desc: Format nix files
     cmds:
