Add workflow_dispatch inputs for manual testing
## Objective

Make the update-packages workflow easier to test by adding manual trigger
inputs for package selection and dry-run mode.

## Primary Changes

- Add workflow_dispatch inputs: package (choice: all/claude-code/codex)
  and dry-run (boolean) to update-packages.yml
- Script reads UPDATE_PACKAGE and DRY_RUN env vars, defaults to all/false
- Dry-run mode checks versions only without mutating files or pushing
- Commit step skipped when dry-run is true

## Files and Code Sections

- .github/workflows/update-packages.yml: workflow_dispatch inputs, env
  passthrough, if guard on commit step
- scripts/update-packages.sh: env var support, dry-run early exit in
  both update functions, conditional package selection in main()

--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -3,6 +3,21 @@ on:
   schedule:
     - cron: '0 9 * * *' # Daily 9:00 UTC
   workflow_dispatch:
+    inputs:
+      package:
+        description: 'Package to update (all / claude-code / codex)'
+        required: false
+        default: 'all'
+        type: choice
+        options:
+          - all
+          - claude-code
+          - codex
+      dry-run:
+        description: 'Dry run: check versions only, do not update or push'
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: write
@@ -24,9 +39,13 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@565684385bcd71bad329742eefe8d12f2e765b39 # v13
 
       - name: Run update script
+        env:
+          UPDATE_PACKAGE: ${{ inputs.package || 'all' }}
+          DRY_RUN: ${{ inputs.dry-run || 'false' }}
         run: bash scripts/update-packages.sh
 
       - name: Commit and push
+        if: inputs.dry-run != true
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
